mundo de palitos page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </div>
             </div>
           </a>
-          <a href="https://scratch.mit.edu/studios/25549052/">
+          <a href="projetos/mundo-dos-palitos.html">
             <div class='grid-item' style="background: #555; color: #fff;">
               <img src="img/Projetos/Fupalito.svg" alt="Fupicat Palito">
               <div class="info">
