--- a/projetos/mundo-dos-palitos.html
+++ b/projetos/mundo-dos-palitos.html
@@ -20,9 +20,9 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6e438d">
 
-    <title>Fupi &#183; Modelo 3D do Scratch Cat</title>
+    <title>Fupi &#183; Mundo dos Palitos</title>
   </head>
-  <body style='background-color: #7e7c82'>
+  <body style='background-color: #dfdfdf'>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
     
     <header></header>
@@ -31,9 +31,202 @@
       <img src="../img/MDP Logo.svg" alt="Logotipo do Mundo dos Palitos" style='margin: 10px 0px;'>
     </section>
 
-    <section class='series'>
+    <section class='browser-game'>
       <div class="container">
-          
+        <div class="grid">
+        <div class="grid-item" style="color: #000; background-color: #b3b3b3;">
+            <div class="info">
+              <h1>Sobre</h1>
+              <p>Mundos dos Palitos (ou Mundo de Palitos) é uma série animada feita no Scratch, criada por <a href="https://scratch.mit.edu/users/The_Maujoa/" style='color: #ae140d;'>Maujoa</a>.</p>
+              <p>Cada episódio é animado por um dos contribuidores: Maujoa, <a href="https://scratch.mit.edu/users/davekal/" style='color: #ae140d;'>Dave</a>, <a href="https://scratch.mit.edu/users/fupicat/" style='color: #ae140d;'>Fupi (eu)</a>, e <a href="https://scratch.mit.edu/users/leolegal/" style='color: #ae140d;'>Leo.</a></p>
+              <h1>Sinopse</h1>
+              <p>Um portal estranho de repente surgiu na terra e começou a sugar tudo o que existe.</br>Das pessoas sugadas, (atualmente) quatro personagens se reúnem nesta dimensão para se aventurar e</br>escapar desse mundo estranho, mas lógico que no meio do caminho irão se deparar com estranhos...</p>
+            </div>
+          </div>
+          <div class="grid-item" style="color: #000; background-color: #b3b3b3;">
+            <div class="info">
+              <h1>Links</h1>
+              <p><a href="https://scratch.mit.edu/studios/25549052/" style='color: #ae140d;'>Estúdio do Scratch</a></p>
+              <p><a href="https://scratch.mit.edu/studios/25835179/" style='color: #ae140d;'>Estúdio da Primeira Temporada</br>(alguns episódios foram perdidos)</a></p>
+            </div>
+          </div>
+        </div>
+
+        <h1>Episódios</h1>
+
+        <div class="grid" style='grid-template-columns: auto auto;' id='MDPgrid'>
+
+          <a href="https://scratch.mit.edu/projects/353414298/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/353414298_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 1</h1>
+                <p>Um portal estranho surge na terra e começa a sugar tudo o que existe.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/353433827/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/353433827_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 2 - A Casa</h1>
+                <p>O portal aumenta e Fupi é sugado.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/353902379/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/353902379_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 3 - O Lápis Estranho</h1>
+                <p>O grupo encontra um lápis aparentemente inútil.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/353968870/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/353968870_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 4 - A Nave</h1>
+                <p>Uma nave estranha persegue os habitantes da dimensão stick.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/356040790/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356040790_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 5 - A Não</h1>
+                <p>Algo terrível acontece com o lápis...</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/356242806/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356242806_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 6 - O Mistério da Nave</h1>
+                <p>Leo se junta ao grupo.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/356333657/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356333657_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 7 - Quem é esse Cara?</h1>
+                <p>O grupo conhece seu primeiro obstáculo.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/356341657/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356341657_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 8 - Buraco</h1>
+                <p>Voltar para casa será mais difícil do que aparenta.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/356414735/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356414735_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 9 - Perseguição</h1>
+                <p>O grupo persegue os habitantes para pedir ajuda.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/356414735/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356414735_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 10 - Caímos</h1>
+                <p>O caminho fica mais tortuoso.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/358801569/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/358801569_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 11 - A Cidade</h1>
+                <p>Eles chegam à cidade stick, mas a que preço?</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/360253081/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/360253081_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 12 - O Cara</h1>
+                <p>Parece que eles não estão sozinhos a final de contas.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/361028257/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/361028257_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 13 - A Câmera</h1>
+                <p>Leo descobre uma ferramenta incrível.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/361401469/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/361401469_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 14 - A Foto</h1>
+                <p>O vilão entra em uma enrascada.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/362782449/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/362782449_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 15 - O Plano</h1>
+                <p>Os vilões e os herois têm suas próprias ideias sobre como prosseguir.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/363614029/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/363614029_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 16 - O Aluguel</h1>
+                <p>Os herois se infiltram na cidade stick.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/365524246/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/365524246_1440x1080.png" alt="Episódio 1">
+              <div class="info">
+                <h1>Ep 17 - Os Ninjas</h1>
+                <p>Parece que eles não estão sozinhos a final de contas.²</p>
+              </div>
+            </div>
+          </a>
+
+        </div>
       </div>
     </section>
 
