crie sua dança página

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               </div>
             </div>
           </a>
-          <a href="https://scratch.mit.edu/projects/356472618/embed">
+          <a href="projetos/crie-sua-danca.html">
             <div class='grid-item' style="background: #000; color: #fff;">
               <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança">
               <div class="info">
