--- a/projetos.html
+++ b/projetos.html
@@ -95,6 +95,16 @@
             </div>
           </a>
 
+          <a href="projetos/crie-sua-danca.html">
+            <div class="grid-item">
+              <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança">
+              <div class="info">
+                <h1>Crie sua Dança</h1>
+                <p>Cria dancinhas escrotas.</p>
+              </div>
+            </div>
+          </a>
+
         </div>
       </div>
     </section>
