--- a/footer.html
+++ b/footer.html
@@ -7,4 +7,5 @@
     <a href="https://youtube.com/c/fupicat">YouTube</a> &#183;
     <a href="https://opengameart.org/users/fupi">OpenGameArt</a>
   </p>
+  <p><a href="/email.html">Quer receber emails das minhas coisas?</a></p>
 </div>
