Beat em up + animações + scratchventura traduzido

--- a/projetos.html
+++ b/projetos.html
@@ -106,6 +106,38 @@
             </div>
           </a>
 
+          <a href="projetos/beu-mais-facil.html">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/345792658_1440x1080.png" alt="O Beat 'em Up mais fácil da história">
+              <div class="info">
+                <h1>O Beat 'em Up mais fácil da história</h1>
+                <p>Bata em carinhas até eles ganhar, porque não tem outra opção.</p>
+              </div>
+            </div>
+          </a>
+
+        </div>
+      </div>
+    </section>
+
+    <section class='projects-section' id='anim'>
+      <div class="container">
+        <div class="projects-header">
+          <img src="img/Animações.png" alt="Animações">
+          <h1>Animações</h1>
+        </div>
+        <div class="grid" style='grid-template-columns: auto;'>
+
+          <a href="projetos/scratchventura-traduzido.html">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/278957849_1440x1080.png" alt="Scratchventura Traduzido">
+              <div class="info">
+                <h1>Scratchventura Traduzido</h1>
+                <p>Animação antiga que eu fiz, mas todas as falas são passadas no Google Tradutor 10 vezes.</p>
+              </div>
+            </div>
+          </a>
+
         </div>
       </div>
     </section>
