--- a/projetos/convulsao-simulator.html
+++ b/projetos/convulsao-simulator.html
@@ -35,7 +35,7 @@
 
     <section class='browser-game'>
       <div class="container">
-        <iframe src="https://scratch.mit.edu/projects/360845991/embed" allowtransparency="true" width="1024" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe src="https://scratch.mit.edu/projects/360845991/embed" allowtransparency="true" width="100%" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
         <div class="grid">
           <div class="grid-item" style="color: #fff; background-color: #332f93;">
             <div class="info">
