--- a/projetos.html
+++ b/projetos.html
@@ -116,6 +116,16 @@
             </div>
           </a>
 
+          <a href="projetos/pimjff.html">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/227100617_1440x1080.png" alt="PIMJFF">
+              <div class="info">
+                <h1>PIMJFF</h1>
+                <p>Um jogo de plataforma onde você atravessa paredes.</p>
+              </div>
+            </div>
+          </a>
+
         </div>
       </div>
     </section>
@@ -237,9 +247,15 @@
             toggle.show(); //Mostre a grade.
 
             var hundred = origHeight[$('.projects-section').index($(this).parent().parent())]; //Pegue o tamanho da lista.
-            toggle.stop().animate({height:hundred},200,function(){toggle.css('height', '100%');}); //Anime o tamanho da grade até o valor da lista e então resete o tamanho para 100%.
+            toggle.stop().animate({height:hundred}, 200, function() {
+              toggle.css('height', '100%');
+            }); //Anime o tamanho da grade até o valor da lista e então resete o tamanho para 100%.
+          
           } else { //Senão...
-            toggle.stop().animate({height:0},200,function(){toggle.hide();}); //Anime o tamanho para 0px e esconda a grade.
+          
+            toggle.stop().animate({height:0}, 200, function() {
+              toggle.hide();
+            }); //Anime o tamanho para 0px e esconda a grade.
           }
 
         })
