--- a/projetos/pimjff.html
+++ b/projetos/pimjff.html
@@ -20,45 +20,39 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6e438d">
 
-    <title>Fupi &#183; Crie sua Dança</title>
+    <title>Fupi &#183; PIMJFF</title>
   </head>
-  <body style='background-color: #000'>
+  <body style='background-color: #666'>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
     
     <header></header>
 
     <section class="proj-header">
       <div class="container">
-        <h1 style='color: #fff'>Crie sua Dança</h1>
+        <h1>PIMJFF</h1>
       </div>
     </section>
 
     <section class='browser-game'>
       <div class="container">
-        <iframe src="https://scratch.mit.edu/projects/356472618/embed" allowtransparency="true" width="100%" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe src="https://scratch.mit.edu/projects/227100617/embed" allowtransparency="true" width="100%" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
         <div class="grid">
-          <div class="grid-item" style="color: #fff; background-color: #a334b3;">
+          <div class="grid-item" style="color: #fff; background-color: #323232;">
             <div class="info">
               <h1>Instruções</h1>
-              <p>Controles: Mouse e Teclado</p>
-              <ol>
-                <li>Clique em uma parte do corpo (cabeça, cintura, mãos e pés).</li>
-                <li>Aperte R para começar a gravar.</li>
-                <li>Mova o mouse.</li>
-                <li>Aperte R para parar de gravar.</li>
-                <li>Repita!</li>
-              </ol>
+              <p>Controles: Teclado</p>
+              <p>Setinhas para andar.</p>
+              <p>Z para pular.</p>
+              <p>X para usar seu poder (que deve ser desbloqueado).</p>
             </div>
           </div>
-          <div class="grid-item" style="color: #fff; background-color: #a334b3;">
+          <div class="grid-item" style="color: #fff; background-color: #323232;">
             <div class="info">
               <h1>Sobre</h1>
-              <p>Este jogo foi criado para a [B]aze Jam, uma jam do Scratch.</p>
-              <p>O tema era dança. Eu tava com preguiça de fazer um clone de DDR então resolvi inventar isso.</p>
-              <p>Lançado em 29 de dezembro de 2019.</p>
+              <p>Eu fiz esse jogo porque eu estava com muita vontade de fazer um jogo de plataforma. Eu terminei ele em 2 dias.</p>
+              <p>O nome do jogo é uma sigla para “Platformer I Made Just For Fun” (jogo de plataforma que eu fiz por diversão).</p>
               <h1>Links</h1>
-              <p><a href="https://scratch.mit.edu/projects/356472618/" style="color: #29062f">Página no Scratch</a></p>
-              <p><a href="https://scratch.mit.edu/studios/25368944/" style="color: #29062f">Estúdio da Jam</a></p>
+              <p><a href="https://scratch.mit.edu/projects/227100617/" style="color: #939393">Página no Scratch</a></p>
             </div>
           </div>
         </div>
@@ -68,9 +62,9 @@
     <footer></footer>
 
     <script
-			src="https://code.jquery.com/jquery-3.4.1.min.js"
-			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-			crossorigin="anonymous"></script>
+	  src="https://code.jquery.com/jquery-3.4.1.min.js"
+	  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+	  crossorigin="anonymous"></script>
     <script src="/autoload.js"></script>
 
   </body>
