--- a/projetos/scratchventura-traduzido.html
+++ b/projetos/scratchventura-traduzido.html
@@ -35,7 +35,7 @@
 
     <section class='browser-game'>
       <div class="container">
-        <iframe src="https://scratch.mit.edu/projects/278957849/embed" allowtransparency="true" width="1024" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe src="https://scratch.mit.edu/projects/278957849/embed" allowtransparency="true" width="100%" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
         <div class="grid" style="grid-template-columns: auto;">
           <div class="grid-item" style="color: #fff; background-color: #335b29;">
             <div class="info">
