Vida de Pengoen

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <h1>Jogos</h1>
               </div>
             </a>
-            <a href="projetos.html#animações">
+            <a href="projetos.html#anim">
               <div class='box-small'>
                 <img src="img/Animações.png" alt="Animações">
                 <h1>Animações</h1>
               </div>
             </a>
-            <a href="projetos.html#músicas">
+            <a href="projetos.html#music">
               <div class='box-small'>
                 <img src="img/Música.png" alt="Músicas">
                 <h1>Músicas</h1>
