--- a/projetos.html
+++ b/projetos.html
@@ -136,7 +136,7 @@
           <img src="img/Animações.png" alt="Animações">
           <h1>Animações</h1>
         </div>
-        <div class="grid" style='grid-template-columns: auto;'>
+        <div class="grid" style='grid-template-columns: auto auto;'>
 
           <a href="projetos/scratchventura-traduzido.html">
             <div class="grid-item">
@@ -144,6 +144,16 @@
               <div class="info">
                 <h1>Scratchventura Traduzido</h1>
                 <p>Animação antiga que eu fiz, mas todas as falas são passadas no Google Tradutor 10 vezes.</p>
+              </div>
+            </div>
+          </a>
+          
+          <a href="projetos/vida-de-pengoen.html">
+            <div class="grid-item">
+              <img src="img/Projetos/Pengoen.svg" alt="Vida de Pengoen">
+              <div class="info">
+                <h1>Vida de Pengoen</h1>
+                <p>Um loop infinito da vida mais interessante de todas.</p>
               </div>
             </div>
           </a>
