--- a/projetos.html
+++ b/projetos.html
@@ -126,6 +126,16 @@
             </div>
           </a>
 
+          <a href="projetos/sz-super.html">
+            <div class="grid-item">
+              <img src="img/Projetos/SZ Super.svg" alt="SZ Super">
+              <div class="info">
+                <h1>SZ Super</h1>
+                <p>O antecessor de SZ, um mundo virtual intergalático.</p>
+              </div>
+            </div>
+          </a>
+
         </div>
       </div>
     </section>
