--- a/projetos/sz.html
+++ b/projetos/sz.html
@@ -65,7 +65,7 @@
           <div class="grid-item" style="color: #000; background-color: #8668c8;">
             <div class="info">
               <h1>Sobre</h1>
-              <p>Este jogo é baseado em <a href="scratcherz.html" style="color: #000; font-weight: bold;">ScratcherZ</a>, uma série de jogos antigos que eu fiz no Scratch.</p>
+              <p>Este jogo é baseado em ScratcherZ, uma série de jogos antigos que eu fiz no Scratch.</p>
               <h1>Links</h1>
               <p><a href="https://github.com/Fupicat/sz" style="color: #0f0624">Repositório no GitHub</a></p>
             </div>
