links com linha + mdp consertado

--- a/projetos.html
+++ b/projetos.html
@@ -168,6 +168,16 @@
             </div>
           </a>
 
+          <a href="projetos/coisas-do-scratch.html">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/154342532_1440x1080.png" alt="Coisas do Scratch">
+              <div class="info">
+                <h1>Coisas do Scratch</h1>
+                <p>O show só para Scratchers.</p>
+              </div>
+            </div>
+          </a>
+
         </div>
       </div>
     </section>
