--- a/projetos/beu-mais-facil.html
+++ b/projetos/beu-mais-facil.html
@@ -53,8 +53,8 @@
               <p>O tema era Beat 'em Up, então eu fiz esse protótipozinho em uma tarde.</p>
               <p>Lançado em 17 de novembro de 2019.</p>
               <h1>Links</h1>
-              <p><a href="https://scratch.mit.edu/projects/345792658/" style="color: #939393">Página no Scratch</a></p>
-              <p><a href="https://scratch.mit.edu/studios/25368944/" style="color: #939393">Estúdio da Jam</a></p>
+              <p><a href="https://scratch.mit.edu/projects/345792658/" style="color: #fff">Página no Scratch</a></p>
+              <p><a href="https://scratch.mit.edu/studios/25368944/" style="color: #fff">Estúdio da Jam</a></p>
             </div>
           </div>
         </div>
