--- a/projetos/blind-boom.html
+++ b/projetos/blind-boom.html
@@ -55,8 +55,8 @@
               <p>Fiquei em 3º lugar de 8 participantes.</p>
               <p>Lançado em 12 de julho de 2019.</p>
               <h1>Links</h1>
-              <p><a href="https://fupi.itch.io/blindboom" style="color: #a4a4a4">Página no Itch</a></p>
-              <p><a href="https://itch.io/jam/trijam-27/rate/449761" style="color: #a4a4a4">Página da jam</a></p>
+              <p><a href="https://fupi.itch.io/blindboom" style="color: #fff">Página no Itch</a></p>
+              <p><a href="https://itch.io/jam/trijam-27/rate/449761" style="color: #fff">Página da jam</a></p>
             </div>
           </div>
         </div>
