--- a/projetos/color-maze.html
+++ b/projetos/color-maze.html
@@ -54,8 +54,8 @@
               <p>Fiquei em 4º lugar de 15 participantes.</p>
               <p>Lançado em 6 de julho de 2019.</p>
               <h1>Links</h1>
-              <p><a href="https://fupi.itch.io/color-maze" style="color: #052731">Página no Itch</a></p>
-              <p><a href="https://itch.io/jam/trijam-26/rate/447025" style="color: #052731">Página da jam</a></p>
+              <p><a href="https://fupi.itch.io/color-maze" style="color: #fff">Página no Itch</a></p>
+              <p><a href="https://itch.io/jam/trijam-26/rate/447025" style="color: #fff">Página da jam</a></p>
             </div>
           </div>
         </div>
