--- a/projetos/convulsao-simulator.html
+++ b/projetos/convulsao-simulator.html
@@ -51,8 +51,8 @@
               <p>O tema era simulador então eu desisti completamente.</p>
               <p>Lançado em 19 de janeiro de 2020.</p>
               <h1>Links</h1>
-              <p><a href="https://scratch.mit.edu/projects/360845991/" style="color: #c2bff9">Página no Scratch</a></p>
-              <p><a href="https://scratch.mit.edu/studios/25368944/" style="color: #c2bff9">Estúdio da Jam</a></p>
+              <p><a href="https://scratch.mit.edu/projects/360845991/" style="color: #fff">Página no Scratch</a></p>
+              <p><a href="https://scratch.mit.edu/studios/25368944/" style="color: #fff">Estúdio da Jam</a></p>
             </div>
           </div>
         </div>
