--- a/projetos/mundo-dos-palitos.html
+++ b/projetos/mundo-dos-palitos.html
@@ -37,8 +37,8 @@
         <div class="grid-item" style="color: #000; background-color: #b3b3b3;">
             <div class="info">
               <h1>Sobre</h1>
-              <p>Mundos dos Palitos (ou Mundo de Palitos) é uma série animada feita no Scratch, criada por <a href="https://scratch.mit.edu/users/The_Maujoa/" style='color: #ae140d;'>Maujoa</a>.</p>
-              <p>Cada episódio é animado por um dos contribuidores: Maujoa, <a href="https://scratch.mit.edu/users/davekal/" style='color: #ae140d;'>Dave</a>, <a href="https://scratch.mit.edu/users/fupicat/" style='color: #ae140d;'>Fupi (eu)</a>, e <a href="https://scratch.mit.edu/users/leolegal/" style='color: #ae140d;'>Leo.</a></p>
+              <p>Mundos dos Palitos (ou Mundo de Palitos) é uma série animada feita no Scratch, criada por <a href="https://scratch.mit.edu/users/The_Maujoa/" style='color: #000;'>Maujoa</a>.</p>
+              <p>Cada episódio é animado por um dos contribuidores: Maujoa, <a href="https://scratch.mit.edu/users/davekal/" style='color: #000;'>Dave</a>, <a href="https://scratch.mit.edu/users/fupicat/" style='color: #000;'>Fupi (eu)</a>, e <a href="https://scratch.mit.edu/users/leolegal/" style='color: #000;'>Leo.</a></p>
               <h1>Sinopse</h1>
               <p>Um portal estranho de repente surgiu na terra e começou a sugar tudo o que existe.</br>Das pessoas sugadas, (atualmente) quatro personagens se reúnem nesta dimensão para se aventurar e</br>escapar desse mundo estranho, mas lógico que no meio do caminho irão se deparar com estranhos...</p>
             </div>
@@ -46,15 +46,15 @@
           <div class="grid-item" style="color: #000; background-color: #b3b3b3;">
             <div class="info">
               <h1>Links</h1>
-              <p><a href="https://scratch.mit.edu/studios/25549052/" style='color: #ae140d;'>Estúdio do Scratch</a></p>
-              <p><a href="https://scratch.mit.edu/studios/25835179/" style='color: #ae140d;'>Estúdio da Primeira Temporada</br>(alguns episódios foram perdidos)</a></p>
+              <p><a href="https://scratch.mit.edu/studios/25549052/" style='color: #000;'>Estúdio do Scratch</a></p>
+              <p><a href="https://scratch.mit.edu/studios/25835179/" style='color: #000;'>Estúdio da Primeira Temporada</br>(alguns episódios foram perdidos)</a></p>
             </div>
           </div>
         </div>
 
         <h1>Episódios</h1>
 
-        <div class="grid" style='grid-template-columns: auto auto;' id='MDPgrid'>
+        <div class="grid series-grid" style='grid-template-columns: auto auto;' id='MDPgrid'>
 
           <a href="https://scratch.mit.edu/projects/353414298/embed">
             <div class="grid-item">
@@ -146,7 +146,7 @@
             </div>
           </a>
 
-          <a href="https://scratch.mit.edu/projects/356414735/embed">
+          <a href="https://scratch.mit.edu/projects/357975641/embed">
             <div class="grid-item">
               <img src="https://cdn2.scratch.mit.edu/get_image/project/356414735_1440x1080.png" alt="Episódio 1">
               <div class="info">
