--- a/projetos/nowhere-but-forward.html
+++ b/projetos/nowhere-but-forward.html
@@ -53,8 +53,8 @@
               <p>Fiquei em 717º lugar de 2618 participantes.</p>
               <p>Lançado em 4 de agosto de 2019.</p>
               <h1>Links</h1>
-              <p><a href="https://fupi.itch.io/nowhere-but-forward" style="color: #112b0e">Página no Itch</a></p>
-              <p><a href="https://itch.io/jam/gmtk-2019/rate/460975" style="color: #112b0e">Página da jam</a></p>
+              <p><a href="https://fupi.itch.io/nowhere-but-forward" style="color: #000">Página no Itch</a></p>
+              <p><a href="https://itch.io/jam/gmtk-2019/rate/460975" style="color: #000">Página da jam</a></p>
             </div>
           </div>
         </div>
