--- a/projetos/pimjff.html
+++ b/projetos/pimjff.html
@@ -52,7 +52,7 @@
               <p>Eu fiz esse jogo porque eu estava com muita vontade de fazer um jogo de plataforma. Eu terminei ele em 2 dias.</p>
               <p>O nome do jogo é uma sigla para “Platformer I Made Just For Fun” (jogo de plataforma que eu fiz por diversão).</p>
               <h1>Links</h1>
-              <p><a href="https://scratch.mit.edu/projects/227100617/" style="color: #939393">Página no Scratch</a></p>
+              <p><a href="https://scratch.mit.edu/projects/227100617/" style="color: #fff">Página no Scratch</a></p>
             </div>
           </div>
         </div>
