--- a/projetos/scratch-cat-3d.html
+++ b/projetos/scratch-cat-3d.html
@@ -49,8 +49,8 @@
               <h1>Sobre</h1>
               <p>Esse modelo na verdade ficou bastante popular no Scratch, ficando na barra de “Projetos que a comunidade gosta” por acho que uma semana inteira, foi bem louco. Um cara inclusive me pediu o modelo por email e imprimiu ele em 3D!</p>
               <h1>Links</h1>
-              <p><a href="https://drive.google.com/open?id=1-9S4z1lf0PgKuJCCAj5fFGBq_hmNeAGD" style="color: #c9c9c9">Download do arquivo do Blender</a></p>
-              <p><a href="https://scratch.mit.edu/projects/357731094/" style="color: #c9c9c9">Projeto original no Scratch</a></p>
+              <p><a href="https://drive.google.com/open?id=1-9S4z1lf0PgKuJCCAj5fFGBq_hmNeAGD" style="color: white">Download do arquivo do Blender</a></p>
+              <p><a href="https://scratch.mit.edu/projects/357731094/" style="color: white">Projeto original no Scratch</a></p>
             </div>
           </div>
         </div>
