--- a/projetos/scratchventura-traduzido.html
+++ b/projetos/scratchventura-traduzido.html
@@ -40,9 +40,9 @@
           <div class="grid-item" style="color: #fff; background-color: #335b29;">
             <div class="info">
               <h1>Sobre</h1>
-              <p>Esse projeto é apenas a minha animação antiga <a href="https://scratch.mit.edu/projects/12714103" style='color: #fff; font-weight: bold;'>Scratchventura</a>, mas todas as falas são traduzidas aleatoriamente 10 vezes pelo Google Tradutor. Os resultados obviamente são sempre prefeitamente corretos.</p>
+              <p>Esse projeto é apenas a minha animação antiga <a href="https://scratch.mit.edu/projects/12714103" style='color: #fff;'>Scratchventura</a>, mas todas as falas são traduzidas aleatoriamente 10 vezes pelo Google Tradutor. Os resultados obviamente são sempre prefeitamente corretos.</p>
               <h1>Links</h1>
-              <p><a href="https://scratch.mit.edu/projects/278957849/" style="color: #051102">Página no Scratch</a></p>
+              <p><a href="https://scratch.mit.edu/projects/278957849/" style="color: #fff">Página no Scratch</a></p>
             </div>
           </div>
         </div>
