--- a/projetos/sz-super.html
+++ b/projetos/sz-super.html
@@ -57,7 +57,7 @@
               <p>Você pode jogar minijogos, comprar roupas e decorar seu próprio planeta.</p>
               <p>Na época, eu atualizava esse jogo periodicamente e às vezes adicionava festas. Como a última atualização foi em outubro, a última festa foi a de Halloween, e o projeto ainda tem temática de Halloween até hoje por que eu parei de atualizá-lo.</p>
               <h1>Links</h1>
-              <p><a href="https://scratch.mit.edu/projects/167982304/" style="color: #86d7a0">Página no Scratch</a></p>
+              <p><a href="https://scratch.mit.edu/projects/167982304/" style="color: #fff">Página no Scratch</a></p>
             </div>
           </div>
         </div>
