--- a/projetos/sz.html
+++ b/projetos/sz.html
@@ -67,7 +67,7 @@
               <h1>Sobre</h1>
               <p>Este jogo é baseado em ScratcherZ, uma série de jogos antigos que eu fiz no Scratch.</p>
               <h1>Links</h1>
-              <p><a href="https://github.com/Fupicat/sz" style="color: #0f0624">Repositório no GitHub</a></p>
+              <p><a href="https://github.com/Fupicat/sz" style="color: #000">Repositório no GitHub</a></p>
             </div>
           </div>
         </div>
